--- a/README
+++ b/README
@@ -7,9 +7,9 @@ The entire folder must be downloaded to run the project by the command include("
 
 ## File Descriptions
 
-The inital state of the robot is defined by the creation of "project1Robot.urdf" where each link is described with revolute joints connecting them. A 'continuous' joint constrant is used for all links except the endeffectors, which are constrained with a 'fixed' constraint. 
+The initial state of the robot is defined by the creation of "project1Robot.urdf" where each link is described with revolute joints connecting them. A 'continuous' joint constraint is used for all links except the endeffectors, which are constrained with a 'fixed' constraint. 
 
-The 'project1_functions.jl' file creates the required functions to construct the 'project1.jl' solution. The function 'update_planar_state()'is defined to update the planar robot's configuration in the visualizer, with the necessary arguments of 'state', 'mvis', and 'q'. The 'request_input()' command is used to create the user input function that prompts the user to input x, y, and z coordinates in the terminal. The 'calcXinW()' function is used to perform the required transformations to yield the endeffector position in the world frame using forward kienmatics, the result of the function will be used to verify the position found using inverse kinematics. The robot mechanism is loaded into the file from the urdf through the command 'display_urdf'and the state of the robot is defined with the command 'MechanismState'. The endeffector body, frame, and point configurations are defined in relation to the base frame using 'findbody' and 'default_frame'.
+The 'project1_functions.jl' file creates the required functions to construct the 'project1.jl' solution. The function 'update_planar_state()'is defined to update the planar robot's configuration in the visualizer, with the necessary arguments of 'state', 'mvis', and 'q'. The 'request_input()' command is used to create the user input function that prompts the user to input x, y, and z coordinates in the terminal. The 'calcXinW()' function is used to perform the required transformations to yield the endeffector position in the world frame using forward kinematics, the result of the function will be used to verify the position found using inverse kinematics. The robot mechanism is loaded into the file from the urdf through the command 'display_urdf'and the state of the robot is defined with the command 'MechanismState'. The endeffector body, frame, and point configurations are defined in relation to the base frame using 'findbody' and 'default_frame'.
 
-The main code 'project1.jl' utlizies the 'for' function to create the main loop for solving the ode, including calculating the Jacobian using the 'point_jacobian' function. The psuedoinverse of the calculated Jacobian is found using the function 'pinv()', where the change in joint angle, dq, is found and added to the current joint angle magnitude. The 'for' loop runs for either 100 iterations or until the difference between the desired position of the endeffector, desiredX, and the current position of the endeffector, currentX, is less than the acceptable error. The visualizer updates after each iteration, ultimately settling on the desiredX. 
+The main code 'project1.jl' utilizes the 'for' function to create the main loop for solving the ode, including calculating the Jacobian using the 'point_jacobian' function. The psuedoinverse of the calculated Jacobian is found using the function 'pinv()', where the change in joint angle, dq, is found and added to the current joint angle magnitude. The 'for' loop runs for either 100 iterations or until the difference between the desired position of the endeffector, desiredX, and the current position of the endeffector, currentX, is less than the acceptable error. The visualizer updates after each iteration, ultimately settling on the desiredX. 
 
